--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --runInBand --config ./test/jest-e2e.json",
+    "test:test": "run-s db:migrate:test test:e2e",
     "prepare": "husky"
   },
   "dependencies": {
@@ -60,6 +61,8 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -70,6 +73,7 @@
     "jest": "^29.5.0",
     "jest-mock": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "prisma": "^5.16.2",
     "prisma-dbml-generator": "^0.12.0",
@@ -90,7 +94,10 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/(?!src|test).*"
+    ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -99,8 +106,8 @@
       "**/*.(t|j)s"
     ],
     "moduleNameMapper": {
-      "^@app/(.*)$": "<rootDir>/$1",
-      "^@test/(.*)$": "/test/$1"
+      "^@app/(.*)$": "<rootDir>/src/$1",
+      "^@test/(.*)$": "<rootDir>/test/$1"
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
