test: adds tests for crud

--- a/.env.testing
+++ b/.env.testing
@@ -4,7 +4,7 @@ TZ="UTC"
 API_PORT="3000"
 JWT_SECRET="..."
 
-DB_HOST="postgres"
+DB_HOST="localhost"
 DB_PORT="5432"
 DB_DATABASE="rpd_test"
 DB_USERNAME="postgres"
