--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "husky": "^9.0.11",
     "jest": "^29.5.0",
     "jest-mock": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
