--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cross-spawn": "^6.0.6",
+    "@types/npm-which": "^3.0.3",
     "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-spawn": "^7.0.3",
     "helmet": "^7.1.0",
     "nestjs-cls": "^4.3.0",
+    "npm-which": "^3.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
